# oasis-todoapp

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  nginx.conf
.claude/: settings.local.json
.claude/agents/: build-fix-loop.md
.claude/rules/: architecture.md  coding.md  devops.md  genai.md  uxui.md  work-items.md
aspec/: foundation.md
aspec/architecture/: apis.md  design.md
aspec/devops/: cicd.md  infrastructure.md  localdev.md
aspec/uxui/: cli.md  experience.md  interface.md  setup.md
aspec/work-items/: 0000-item.md  0001-work-areas.md  0002-todos-bundles.md  0003-keyboard-nav.md
backend/: Cargo.toml  Dockerfile
backend/src/: bundles.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  todos.rs  work_areas.rs
backend/tests/: integration.rs
docs/: 0001-work-areas.md  0002-todos-bundles.md  0003-keyboard-nav.md  setup.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: bundles.spec.ts  todos.spec.ts  work-areas.spec.ts
frontend/: Dockerfile  nginx.conf  package.json
frontend-new/: package-lock.json
frontend-new/src/api/: bundles.ts  todos.ts
frontend-new/src/components/: Bundle.css  TabBar.test.tsx  TabBar.tsx  TodoItem.css  TodoItem.test.tsx  WorkArea.test.tsx  WorkArea.tsx
frontend-new/src/utils/: keyboard.ts
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/api/: workAreas.ts
frontend/src/components/: Bundle.test.tsx  Bundle.tsx  TabBar.css  TodoItem.tsx  WorkArea.css
